feat: implement PUT /accounts/{accountId}/academies/{academyId}
