# src/controllers/academyController.js
@@ -70,4 +70,30 @@ const findById = async (req, res) => {
   responseHelper.ok(req, res, academy);
 };
 
-export { create, findAndCountAll, findById };
+/**
+ * Handler for PUT /accounts/{accountId}/academies/{academyId}
+ *
+ * @param {Request} req - The Express request object.
+ * @param {Response} res - The Express response object.
+ */
+const update = async (req, res) => {
+  const { accountId, academyId } = req.params;
+  const payload = req.body;
+
+  const account = await accountService.findById(accountId, { raw: true });
+  if (!account) {
+    responseHelper.notFound(req, res, errorMessages.ACCOUNT_NOT_FOUND, errorCodes.ACCOUNT_NOT_FOUND);
+    return;
+  }
+
+  const academy = await academyService.findById(academyId, { raw: true });
+  if (!academy) {
+    responseHelper.notFound(req, res, errorMessages.ACADEMY_NOT_FOUND, errorCodes.ACADEMY_NOT_FOUND);
+    return;
+  }
+
+  const response = await academyService.update(academyId, payload, { raw: true, returning: true });
+  responseHelper.ok(req, res, response);
+};
+
+export { create, findAndCountAll, findById, update };
